enable logging+cleanup

--- a/system/yunapbx-appliance/image_files/etc/php.ini
+++ b/system/yunapbx-appliance/image_files/etc/php.ini
@@ -2,11 +2,9 @@
 
 zend.ze1_compatibility_mode = Off
 
-; Language Options
-
 engine = On
 ;short_open_tag = Off
-precision    =  12
+precision =  12
 y2k_compliance = On
 output_buffering = Off
 ;output_handler =
@@ -23,33 +21,22 @@ disable_classes =
 
 expose_php = Off
 
-; Resource Limits
-
-max_execution_time = 30	; Maximum execution time of each script, in seconds.
-max_input_time = 60	; Maximum amount of time each script may spend parsing request data.
+max_execution_time = 30
+max_input_time = 60
 ;max_input_nesting_level = 64
-memory_limit = 32M	; Maximum amount of memory a script may consume.
+memory_limit = 32M
 
-error_reporting  =  E_ALL & ~E_NOTICE & ~E_STRICT
-
+error_reporting  =  E_ALL & ~E_NOTICE & ~E_STRICT & ~E_DEPRECATED
 display_errors = On
 display_startup_errors = Off
-log_errors = Off
+log_errors = On
 log_errors_max_len = 1024
 ignore_repeated_errors = Off
 ignore_repeated_source = Off
 report_memleaks = On
 ;report_zend_debug = 0
 track_errors = Off
-;html_errors = Off
-;docref_root = "/phpmanual/"
-;docref_ext = .html
-;error_prepend_string = "<font color=#ff0000>"
-;error_append_string = "</font>"
-; Log errors to specified file.
-;error_log = /var/log/php_errors.log
-; Log errors to syslog.
-;error_log = syslog
+error_log = syslog
 
 ; Data Handling
 
@@ -82,7 +69,7 @@ enable_dl = On
 ;cgi.force_redirect = 1
 ;cgi.nph = 1
 ;cgi.redirect_status_env = ;
-cgi.fix_pathinfo=1
+cgi.fix_pathinfo = 1
 ;fastcgi.impersonate = 1;
 ;fastcgi.logging = 0
 ;cgi.rfc2616_headers = 0
@@ -151,7 +138,7 @@ session.cookie_domain =
 session.cookie_httponly =
 session.serialize_handler = php
 session.gc_probability = 1
-session.gc_divisor     = 100
+session.gc_divisor = 100
 session.gc_maxlifetime = 1440
 session.bug_compat_42 = On
 session.bug_compat_warn = On
@@ -179,16 +166,3 @@ url_rewriter.tags = "a=href,area=href,frame=src,input=src,form=,fieldset="
 ;mbstring.strict_detection = Off
 ;mbstring.http_output_conv_mimetype=
 ;mbstring.script_encoding=
-
-[soap]
-soap.wsdl_cache_enabled=1
-soap.wsdl_cache_dir="/tmp"
-soap.wsdl_cache_ttl=86400
-soap.wsdl_cache_limit = 5
-
-[sysvshm]
-;sysvshm.init_mem = 10000
-
-[mcrypt]
-;mcrypt.algorithms_dir=
-;mcrypt.modes_dir=
