--- a/net/yunapbx/Makefile
+++ b/net/yunapbx/Makefile
@@ -8,7 +8,7 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=yunapbx
-PKG_VERSION:=0.3-alpha
+PKG_VERSION:=0.4-alpha
 PKG_RELEASE:=1
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
 PKG_SOURCE:=v$(PKG_VERSION).tar.gz
@@ -38,10 +38,10 @@ define Build/Compile
 endef
 
 define Package/yunapbx/install
-	$(INSTALL_DIR) $(1)/etc
 	$(INSTALL_DIR) $(1)/www
 	$(INSTALL_DIR) $(1)/usr/share/yunapbx
 	$(CP) $(PKG_BUILD_DIR)/admin $(1)/www/
+	$(CP) $(PKG_BUILD_DIR)/config $(1)/www/
 	$(CP) $(PKG_BUILD_DIR)/favicon.ico $(1)/www/
 	$(CP) $(PKG_BUILD_DIR)/generator $(1)/www/
 	$(CP) $(PKG_BUILD_DIR)/include $(1)/www/
@@ -50,7 +50,6 @@ define Package/yunapbx/install
 	$(CP) $(PKG_BUILD_DIR)/static $(1)/www/
 	$(CP) $(PKG_BUILD_DIR)/user $(1)/www/
 	$(CP) $(PKG_BUILD_DIR)/db $(1)/usr/share/yunapbx
-	$(CP) $(PKG_BUILD_DIR)/config/* $(1)/etc
 endef
 
 $(eval $(call BuildPackage,yunapbx))
