--- a/system/yunapbx-appliance/image_files/etc/zabbix_agentd.conf
+++ b/system/yunapbx-appliance/image_files/etc/zabbix_agentd.conf
@@ -1,5 +1,5 @@
 PidFile = /var/run/zabbix/zabbix_agentd.pid
-#LogType = system
+LogType = system
 DebugLevel = 2
 EnableRemoteCommands = 1
 StartAgents = 0
