--- a/system/yunapbx-appliance/image_files/etc/asterisk/cel.conf
+++ b/system/yunapbx-appliance/image_files/etc/asterisk/cel.conf
@@ -1,5 +1,5 @@
 [general]
 enable = yes
 apps = dial,park
-events = APP_START,CHAN_START,CHAN_END,ANSWER,HANGUP,BRIDGE_START,BRIDGE_END
+events = APP_START,CHAN_START,CHAN_END,ANSWER,HANGUP
 ;dateformat = %F %T
