--- a/system/yunapbx-appliance/image_files/etc/asterisk/pjsip.conf
+++ b/system/yunapbx-appliance/image_files/etc/asterisk/pjsip.conf
@@ -5,20 +5,38 @@ type = system
 type = global
 user_agent = YunaPBX 1.0
 
-[transport-udp]
+[transport-udp-ipv4]
 type = transport
 protocol = udp
-bind = ::
+bind = 0.0.0.0
 
-[transport-tcp]
+[transport-udp-ipv6]
+type = transport
+protocol = udp
+bind = [::]
+
+[transport-tcp-ipv4]
 type = transport
 protocol = tcp
-bind = ::
+bind = 0.0.0.0
 
-[transport-tls]
+[transport-tcp-ipv6]
+type = transport
+protocol = tcp
+bind = [::]
+
+[transport-tls-ipv4]
 type = transport
 protocol = tls
-bind = ::
+bind = 0.0.0.0
+cert_file = /var/ssl/asterisk.crt
+priv_key_file = /var/ssl/asterisk.key
+method = tlsv1
+
+[transport-tls-ipv6]
+type = transport
+protocol = tls
+bind = [::]
 cert_file = /var/ssl/asterisk.crt
 priv_key_file = /var/ssl/asterisk.key
 method = tlsv1
