--- a/system/yunalbl-appliance/Makefile
+++ b/system/yunalbl-appliance/Makefile
@@ -9,7 +9,7 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=yunalbl-appliance
 PKG_VERSION:=0.1
-PKG_RELEASE:=1
+PKG_RELEASE:=2
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
 PKG_INSTALL:=
 
@@ -21,7 +21,7 @@ define Package/yunalbl-appliance
 	SECTION:=base
 	CATEGORY:=Base system
 	TITLE:=YunaLBL Appliance
-	DEPENDS:=+apache +haproxy +keepalived +zabbix-agentd +@ZABBIX_SSL
+	DEPENDS:=+apache +haproxy +keepalived +modsecurity +zabbix-agentd
 	DEPENDS+=+base-files +block-mount +busybox +ca-certificates +dropbear +fdisk +fstools +logd +odhcp6c +partx-utils +rng-tools +tcpdump +tune2fs +uci +zoneinfo-core
 	DEPENDS+=+kmod-8139too +kmod-button-hotplug +kmod-e1000 +kmod-r8169 +kmod-tg3 +kmod-usb-hid +kmod-usb2 +kmod-usb2-pci +kmod-usb3
 	DEPENDS+=+@USE_GLIBC +@OPENSSL_WITH_EC +@OPENSSL_WITH_EC2M +@BUSYBOX_CUSTOM +@BUSYBOX_CONFIG_LOGIN
