added support for luci

--- a/system/yunapbx-appliance/image_files/etc/lighttpd/lighttpd.conf
+++ b/system/yunapbx-appliance/image_files/etc/lighttpd/lighttpd.conf
@@ -10,7 +10,7 @@ server.groupname               = "yunapbx"
 server.tag                     = "lighttpd"
 index-file.names               = ( "index.php" )
 static-file.exclude-extensions = ( ".php", ".tpl" )
-cgi.assign                     = ( ".php" => "/usr/bin/php-cgi" )
+cgi.assign                     = ( ".php" => "/usr/bin/php-cgi", "cgi-bin/luci" => "" )
 extforward.forwarder           = ( "127.0.0.1" => "trust" )
 
 include                        "/etc/lighttpd/mime.conf"
