asterisk13: fixed paths to /usr/share/asterisk

--- a/system/yunapbx-appliance/image_files/etc/asterisk/asterisk.conf
+++ b/system/yunapbx-appliance/image_files/etc/asterisk/asterisk.conf
@@ -1,10 +1,10 @@
 [directories]
 astetcdir = /etc/asterisk
-astdatadir = /usr/lib/asterisk
+astdatadir = /usr/share/asterisk
 astvarlibdir = /usr/lib/asterisk
 astdbdir = /usr/lib/asterisk
 astkeydir = /usr/lib/asterisk
-astagidir = /usr/lib/asterisk/agi-bin
+astagidir = /usr/share/asterisk/agi-bin
 astspooldir = /data
 astrundir = /var/run/asterisk
 astlogdir = /var/log/asterisk
