--- a/system/yunapbx-appliance/image_files/etc/php.ini
+++ b/system/yunapbx-appliance/image_files/etc/php.ini
@@ -128,14 +128,14 @@ mysqli.default_socket = /var/run/mysql/mysqld.sock
 session.save_handler = files
 session.save_path = "/tmp"
 session.use_cookies = 1
-;session.cookie_secure =
+session.cookie_secure = 1
 session.use_only_cookies = 1
 session.name = PHPSESSID
 session.auto_start = 0
 session.cookie_lifetime = 0
 session.cookie_path = /
 session.cookie_domain =
-session.cookie_httponly =
+session.cookie_httponly = 1
 session.serialize_handler = php
 session.gc_probability = 1
 session.gc_divisor = 100
