--- a/libs/libtevent/Makefile
+++ b/libs/libtevent/Makefile
@@ -11,7 +11,7 @@ PKG_NAME:=tevent
 PKG_VERSION:=0.9.34
 PKG_RELEASE:=1
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
-PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tgz
+PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
 PKG_SOURCE_URL:=https://www.samba.org/ftp/$(PKG_NAME)/
 PKG_MD5SUM:=8df1ae19fd991b82abe66889da0651b0
 PKG_INSTALL:=1
